build bot commands/event listeners

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,10 @@
   <head>
     <title>Discord API</title>
     <link rel="stylesheet" href="/css/style.css" />
+    
   </head>
   <body>
     {{{body}}}
   </body>
+  <script src="/js/script.js"></script>
 </html>
