--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <!-- views/index.hbs -->
 <div class="container">
-  <h1>Discord API</h1>
+  <h1>Graphic Engine</h1>
   <div class="input-container">
     <input type="text" id="command-input" placeholder="Enter command here..." />
     <button id="generate-graphic-btn">Generate Graphic</button>
