--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,4 +10,6 @@
     {{{body}}}
   </body>
   <script src="/js/script.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 </html>
